style.css
#opinionstage-head {
  background: url("images/logo.png") no-repeat 0px 0px;
  height: 56px;
  margin: 0;
  padding: 0;
  text-align: center;
}
.opinionstage-wrap {
  margin: 10px auto;
  background-color: #FAFBFC;
  border: 1px solid #D2E0F0;
}
.opinionstage-wrap .section {
  padding: 15px;
}
.opinionstage-wrap h2 {
  color: #25264c;
  font-weight: bold;
  font-size: 23px;
}
.opinionstage-wrap .os_links_list {
  list-style-type: none;
  margin: 0;
  padding: 0;
}
.opinionstage-wrap .os_links_list li {
  margin-bottom: 21px;
}
.opinionstage-wrap .os_links_list li a {
  color: #5db5d4;
  font-size: 17px;
  text-decoration: none;
}
.opinionstage-wrap input.os-watermark {
	color: rgb(131, 131, 131);
	font-style: italic;
}
.opinionstage-wrap input[type="text"] {
	border: 1px solid #CECECE;
	height: 28px;
	line-height: 28px;
	width: 238px;
	padding-left: 10px;
	margin-right: 5px;
}
.opinionstage-wrap input[type="text"][disabled="disabled"] {
	background-color: #DFDFDF;
}
.opinionstage-wrap .os-button, .os-sidebar-widget .os-button {
    text-decoration: none !important;
    border-top: 1px solid #E7E5E3;
    border-bottom: 1px solid #CFCCC8;
    border-right: 1px solid #CFCCC8;
    border-left: 1px solid #CFCCC8;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
    text-align: center;
    color: #ffffff !important;
	background-color: #289ec4;
    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #289ec4), color-stop(100%, #278fb5));
    background-image: -webkit-linear-gradient(top, #289ec4, #278fb5);
    background-image: -moz-linear-gradient(top, #289ec4, #278fb5);
    background-image: -ms-linear-gradient(top, #289ec4, #278fb5);
    background-image: -o-linear-gradient(top, #289ec4, #278fb5);
    background-image: linear-gradient(top, #289ec4, #278fb5);
    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#289ec4, endColorstr=#278fb5);
	padding: 5px 10px;
}
.opinionstage-wrap .os-button:hover, .os-sidebar-widget .os-button:hover {
    background-color: #40aacd;
    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #40aacd), color-stop(100%, #40aacd));
    background-image: -webkit-linear-gradient(top, #40aacd, #40aacd);
    background-image: -moz-linear-gradient(top, #40aacd, #40aacd);
    background-image: -ms-linear-gradient(top, #40aacd, #40aacd);
    background-image: -o-linear-gradient(top, #40aacd, #40aacd);
    background-image: linear-gradient(top, #40aacd, #40aacd);
    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#40aacd, endColorstr=#40aacd);
	color: #ffffff !important;
}
.opinionstage-wrap .question-link {
	text-decoration: none;
	margin-right: 15px;
}
.opinionstage-wrap .placement_wrapper {
	margin-bottom: 25px;
}
.opinionstage-wrap .placement_wrapper .description {
    width: 190px;
    float: left;
}
.opinionstage-wrap .placement_wrapper .description .text {
    display: inline-block;
    font-size: 17px;
}
.opinionstage-wrap .placement_wrapper .onoffswitch  {
    vertical-align: text-bottom;
	margin-right: 15px;
}
.opinionstage-wrap .onoffswitch {
    position: relative; 
	width: 74px;
    -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
    display: inline-block;
    margin: 0px 0px -8px;
}
.opinionstage-wrap .onoffswitch.disabled {
	opacity: 0.5;
}
.opinionstage-wrap input.onoffswitch-checkbox {
    display: none;
}
.opinionstage-wrap .onoffswitch-label {
	display: block;
	overflow: hidden;
	cursor: pointer;
	border: 2px solid #D5D5D5;
	border-radius: 15px;
	box-shadow: 0px 0px 4px 0px rgba(32, 32, 32, 0.5);
}
.opinionstage-wrap .onoffswitch-inner {
    width: 200%; margin-left: -100%;
    -moz-transition: margin 0.3s ease-in 0s; -webkit-transition: margin 0.3s ease-in 0s;
    -o-transition: margin 0.3s ease-in 0s; transition: margin 0.3s ease-in 0s;
}
.opinionstage-wrap .onoffswitch-inner:before, .opinionstage-wrap .onoffswitch-inner:after {
	float: left;
	width: 50%;
	height: 23px;
	padding: 0;
	line-height: 24px;
	font-size: 13px;
	color: rgba(0, 0, 0, 0.9);
	font-family: Trebuchet, Arial, sans-serif;
	font-weight: bold;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
	text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.63);
}
.opinionstage-wrap .onoffswitch-inner:before {
    content: "ON";
    padding-left: 15px;
    background-color: #40aacd;
    box-shadow: inset 5px 4px 10px 1px rgba(0, 0, 0, 0.2);
}
.opinionstage-wrap .onoffswitch-inner:after {
	content: "OFF";
	padding-left: 18px;
	background-color: #BEC9CA;
	text-align: center;
	box-shadow: inset -5px 4px 10px 1px rgba(0, 0, 0, 0.2);
}
.opinionstage-wrap .onoffswitch-switch {
    width: 25px;
    margin: 0px;
	background: rgb(254,254,254); /* Old browsers */
	background: -moz-linear-gradient(top, rgba(254, 256, 256, 1) 55%,rgba(217, 217, 217, 1) 45%,white 90%); /* FF3.6+ */
	background: -webkit-gradient(linear, left top, left bottom, color-stop(55%,rgba(254,256,256,1)), color-stop(45%,rgba(217,217,217,1)), color-stop(90%, white)); /* Chrome,Safari4+ */
	background: -webkit-linear-gradient(top, rgba(254, 256, 256, 1) 55%,rgba(217, 217, 217, 1) 45%,white 90%); /* Chrome10+,Safari5.1+ */
	background: -o-linear-gradient(top, rgba(254, 256, 256, 1) 55%,rgba(217, 217, 217, 1) 45%,white 90%); /* Opera 11.10+ */
	background: -ms-linear-gradient(top, rgba(254, 256, 256, 1) 55%,rgba(217, 217, 217, 1) 45%,white 90%); /* IE10+ */
	background: linear-gradient(to bottom, rgba(254, 256, 256, 1) 55%,rgba(217, 217, 217, 1) 45%,white 90%); /* W3C */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fefefe', endColorstr='#e9e9e9',GradientType=0 ); /* IE6-9 */
    border-radius: 50%;
    position: absolute;
    top: 1px;
    bottom: 0;
    right: 45px;
    -moz-transition: all 0.3s ease-in 0s;
    -webkit-transition: all 0.3s ease-in 0s;
    -o-transition: all 0.3s ease-in 0s;
    transition: all 0.3s ease-in 0s;
    height: 25px;
    
    -webkit-box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.75), 0px -1px 0px rgba(0, 0, 0, 0.2);
    -moz-box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.75), 0px -1px 0px rgba(0, 0, 0, 0.2);
    box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.75), 0px -1px 0px rgba(0, 0, 0, 0.2);
    
}
.opinionstage-wrap .onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
    margin-left: 0;
}
.opinionstage-wrap .onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
    right: 2px; 
    
    -webkit-box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.75), 0px -1px 0px rgba(74, 121, 221, 0.2), inset 2px -1px 4px -1px rgba(74, 121, 221, 0.9);
    -moz-box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.75), 0px -1px 0px rgba(74, 121, 221, 0.2), inset 2px -1px 4px -1px rgba(74, 121, 221, 0.9);
    box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.75), 0px -1px 0px rgba(74, 121, 221, 0.2), inset 2px -1px 4px -1px rgba(74, 121, 221, 0.9);
}
.opinionstage-wrap .os-long-text {
	display: inline;
}
.opinionstage-wrap .os-notice {
	color: red;
	font-weight: bold;
}
.os-sidebar-widget {
	overflow: hidden;
	margin-bottom: 15px;
}
.os-sidebar-widget .text {
	margin-top: 10px;
}
.os-sidebar-widget #os-email {
	margin-left: 8px;
}

